@@ -111,44 +111,58 @@
   (tocstr-send
    (format "toc_evil %s %s" (toc-normalize user) (if anon "anon" "norm"))))
 
+(defvar toc-permit-mode nil
+  "If non-nil, the toc server believes we are in permit mode.")
+
+(defvar toc-permit-list nil
+  "The list that the server is currently maintaining for us.
+Depening on toc-permit-mode, it is a permit or deny list.")
+
 (defun toc-add-permit (&optional users)
+  (if toc-permit-mode
+      (setq toc-permit-list (append toc-permit-list users))
+    (setq toc-permit-mode nil
+          toc-permit-list users))
   (tocstr-send (mapconcat 'identity (cons "toc_add_permit" users) " ")))
 
 (defun toc-add-deny (&optional users)
+  (if (not toc-permit-mode)
+      (setq toc-permit-list (append toc-permit-list users))
+    (setq toc-permit-mode t
+          toc-permit-list users))
   (tocstr-send (mapconcat 'identity (cons "toc_add_deny" users) " ")))
 
-
-;; The following are some useful ways to use permit/deny. Because (as far
-;; as I can tell) the toc_add_{permit,deny} protocol messages have pretty
-;; lame semantics, these routines do some apparently unnecessary calls in
-;; order to ensure they do exactly what they say.  This may cause
-;; "flashing". Let's say you are in permit-some mode and you are not
-;; permitting, let's say, "DumbAss416".  You then decide to go into
-;; deny-all mode.  This first switches you to deny mode, but denying noone,
-;; so for a moment you could flash online on DumbAss416's screen.  You will
-;; then go away, but nonetheless this a bit uncool.
-
-
-;; Additionally, the middle two calls in each of next two routines is
-;; probably unneccesary, but PROTOCOL does not explicitly say that
-;; switching modes clears the old permit/deny list.  It only says it clears
-;; the list if a switch is caused by an empty add_{permit,deny} message.
-
-(defun toc-permit-only (buddies)
-  (toc-add-deny)                        ; Ensure deny mode
-  (toc-add-permit)                      ; Ensure permit mode, empty permit list
-  (toc-add-permit buddies))             ; Permit only who we want
-
-(defun toc-deny-only (buddies)
-  (toc-add-permit)                      ; Ensure permit mode
-  (toc-add-deny)                        ; Ensure deny mode, empty deny list
-  (toc-add-deny buddies))               ; Deny only who we want to exclude
-
 (defun toc-permit-all ()
-  (toc-deny-only nil))
+  (if (or toc-permit-mode toc-permit-list)
+      (progn
+        (toc-add-permit)
+        (toc-add-deny nil))))
 
 (defun toc-deny-all ()
-  (toc-permit-only nil))
+  (if (or (not toc-permit-mode) toc-permit-list)
+      (progn
+        (toc-add-deny)
+        (toc-add-permit nil))))
+
+;;; The next two could be optimized a bit.  If we happen to be in the right
+;;; mode already, and BUDDIES is a superset of the current list, we should
+;;; just add them.  This method means people on our permit list might see
+;;; us "offline" for an instant just because we add someone to our permit
+;;; list.  (or worse if in deny mode, someone could see us online for an
+;;; instant).  Of course, clever users of the toc interface could be
+;;; calling toc-add-permit/deny instead.
+
+(defun toc-permit-only (buddies)
+  (if (and toc-permit-mode (equal buddies toc-permit-list))
+      ()
+    (toc-add-deny)                      ; Ensure deny mode
+    (toc-add-permit buddies)))          ; Permit only who we want
+
+(defun toc-deny-only (buddies)
+  (if (and (not toc-permit-mode) (equal buddies toc-permit-list))
+      ()
+  (toc-add-permit)                      ; Ensure permit mode
+  (toc-add-deny buddies)))              ; Deny only who we want to exclude
 
 (defun toc-chat-join (room)
   (tocstr-send (format "toc_chat_join 4 %s" (toc-encode room))))
